Fix header height not wrapping content properly

--- a/plugin/app/src/app/fitness-trend/fitness-trend-graph/fitness-trend-graph.component.scss
+++ b/plugin/app/src/app/fitness-trend/fitness-trend-graph/fitness-trend-graph.component.scss
@@ -1,6 +1,5 @@
 .header {
 	margin: 0; // Remove mat-title margin
-	min-height: 180px;
 }
 
 // Class enabled via ngClass when active day on mouseover
